Fix listing title to not overflow

--- a/src/scss/modules/Common/View/_Listing.scss
+++ b/src/scss/modules/Common/View/_Listing.scss
@@ -45,10 +45,22 @@
             display: flex;
             justify-content: space-between;
 
-            & > span {
-                display: flex;
-                align-items: center;
-                justify-content: flex-start;
+            .title {
+                font-weight: bold;
+                min-width: 0;
+
+                & > span {
+                    display: flex;
+                    align-items: center;
+                    justify-content: flex-start;
+                }
+            }
+
+            .updated {
+                font-style: italic;
+                color: $gray-500;
+                white-space: nowrap;
+                padding-left: 0.5rem;
             }
 
             a {
@@ -62,15 +74,6 @@
             }
 
             .fa {
-                color: $gray-500;
-            }
-
-            .title {
-                font-weight: bold;
-            }
-
-            .updated {
-                font-style: italic;
                 color: $gray-500;
             }
         }
